--- a/roles/post-install/tasks/main.yml
+++ b/roles/post-install/tasks/main.yml
@@ -1,2 +1,11 @@
 ---
-# tasks file for Post-Install
+  - name: Run mysql queries
+  
+  - name: update CR status to 'Success'
+    operator_sdk.util.k8s_status:
+      api_version: app.example.com/v1
+      kind: Studentapp
+      name: "{{ ansible_operator_meta.name }}"
+      namespace: "{{ ansible_operator_meta.namespace }}"
+      status:
+        status: 'InProgress'
